# celery-rs

./: Cargo.toml
celery-codegen/: Cargo.toml
src/: error.rs  prelude.rs
src/broker/: amqp.rs  mod.rs  redis.rs
src/protocol/: mod.rs
tests/brokers/: mod.rs
