[workspace]
members = ["./", "celery-codegen"]

[package]
name = "celery"
version = "0.4.0-rcn.11"
authors = ["epwalsh <epwalsh10@gmail.com>"]
edition = "2018"
keywords = ["celery", "amqp", "rabbitmq", "background-jobs"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rusty-celery/rusty-celery"
homepage = "https://github.com/rusty-celery/rusty-celery"
description = "Rust implementation of Celery"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
name = "celery"
path = "src/lib.rs"

[[example]]
name = "celery_app"

[dependencies]
base64 = "0.13.0"
chrono = { version = "0.4.19", features = ["serde"] }
tokio = { version = "1.18.1", features = ["full"] }
tokio-stream = "0.1.8"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
rmp-serde = { version = "1.1.0", optional = true }
rmpv = { version = "1.0.0", optional = true, features = ["with-serde"] }
serde_yaml = { version = "0.8.24", optional = true }
serde-pickle = { version = "1.1.0", optional = true }
thiserror = "1.0.31"
async-trait = "0.1.53"
lapin = "2.1.1"
log = "0.4.17"
futures = { version = "0.3.21", features = ["async-await"] }
uuid = { version = "1.0.0", features = ["v4"] }
rand = "0.8.5"
celery-codegen = { version = "0.4.0-rcn.11", path = "./celery-codegen", optional = true }
colored = "2.0.0"
once_cell = "1.10.0"
globset = "0.4.8"
hostname = "0.3.1"
redis = { version = "0.21.5", features = ["connection-manager", "tokio-comp"] }

[dev-dependencies]
rmp-serde = "1.1.0"
rmpv = { version = "1.0.0", features = ["with-serde"] }
serde_yaml = "0.8.24"
serde-pickle = "1.1.0"
env_logger = "0.9.0"
anyhow = "1.0.57"
structopt = "0.3.26"

[features]
default = ["codegen"]
codegen = ["celery-codegen"]
extra_content_types = ["rmp-serde", "rmpv", "serde_yaml", "serde-pickle"]
